# robotx_packages

./: .gitignore  .gitmodules  .kinetic_depends.rosinstall  .travis.yml  README.md  dependencies.rosinstall  external_dependencies.sh  gource.sh  rosdep.sh  view_gitlog.sh
robotx_communication/: CMakeLists.txt  package.xml
robotx_communication/include/: heartbeat_publisher.h  tcp_client.h
robotx_communication/launch/: communication.launch
robotx_communication/src/: heartbeat_publisher.cpp  heartbeat_publisher_node.cpp  tcp_client.cpp
robotx_core/robotx_driver/: CMakeLists.txt  package.xml
robotx_core/robotx_navigation/: CMakeLists.txt  package.xml
robotx_core/robotx_recognition/: CMakeLists.txt  ignore.txt  package.xml
robotx_core/wamv_description/: CMakeLists.txt  package.xml
robotx_driver/: .clang-format  CMakeLists.txt  package.xml
robotx_driver/config/: diagnostic_aggregator.yaml  gpu_device_info.yaml  jetson1_device_info.yaml  mqtt_bridge.yaml  nmea_navsat_driver.yaml  ping_sender.yaml  simulation.yaml
robotx_driver/include/: cuda_diagnostic.h  heartbeat_publisher.h  ping_sender.h  remote_operated_interface.h  robotx_hardware_interface.h  tcp_client.h
robotx_driver/launch/: .gitignore  communication.launch  diagnostic.launch  dynamixel.launch  simulation.launch  wam_v_sensor_drivers.launch
robotx_driver/launch_cuda/: diagnostic.launch
robotx_driver/src/: cuda_diagnostic.cpp  cuda_diagnostic_node.cpp  heartbeat_publisher.cpp  heartbeat_publisher_node.cpp  ping_sender.cpp  ping_sender_node.cpp  remote_operated_interface.cpp  robotx_hardware_interface.cpp  robotx_hardware_interface_node.cpp  tcp_client.cpp
robotx_gazebo/: CMakeLists.txt  package.xml
robotx_gazebo/config/: joint_control.yaml
robotx_gazebo/include/: ball_launcher_plugin.hh  buoyancy_gazebo_plugin.hh  load_params.hh  usv_gazebo_dynamics_plugin.hh  usv_gazebo_thrust_plugin.hh  usv_gazebo_wind_plugin.hh
robotx_gazebo/launch/: empty_world_robotx.launch  no_gravity.launch  ocean.launch  quat2rpy.launch  robotx_gazebo.launch  sandisland.launch  vmrc.launch  wamv_empty_ocean.launch
robotx_gazebo/src/: ball_launcher_plugin.cc  buoyancy_gazebo_plugin.cc  usv_gazebo_dynamics_plugin.cc  usv_gazebo_thrust_plugin.cc  usv_gazebo_wind_plugin.cc  usv_twist_sensor_plugin.cc
robotx_gazebo/urdf/: gazebo_cog_publisher_plugin.xacro  usv_gazebo_dynamics_plugin.xacro  wamv_gazebo_ball_launcher_plugin.xacro  wamv_gazebo_dynamics_plugin.xacro  wamv_gazebo_thrust_plugin.xacro
robotx_gazebo/worlds/: example_course.world.xacro  ocean.world.xacro  ocean.xacro  sandisland.world  sandisland_buoys.world
robotx_msgs/: CMakeLists.txt  package.xml
robotx_msgs/msg/: BoundingBox2D.msg  BoundingBox2DArray.msg  BoundingBox2DArrayStamped.msg  BoundingBox3D.msg  GeographicLine.msg  GeographicMap.msg  GeographicPoint.msg  Heartbeat.msg  Object2D.msg  ObjectRegionOfInterest.msg  ObjectRegionOfInterestArray.msg  ObjectType.msg  Objects.msg  Objects2D.msg  RegionOfInterest2D.msg  RegionOfInterest2DArray.msg  RegionOfInterestArray.msg  TechnicalDirectorNetworkStatus.msg  VoxelChainInput.msg  VoxelChainInputs.msg
robotx_navigation/: CMakeLists.txt  package.xml
robotx_navigation/config/: costmap_clear_request_sender.yaml  geographic_map_server.yaml  ndt_mapping.yaml  obstacle_map_server.yaml  robotx_localization.yaml
robotx_navigation/data/: coastline.yaml  dowmload_osm.py  download_osm.sh  get_coastline.py  osaka.osm
robotx_navigation/include/: costmap_clear_request_sender.h  geographic_map_server.h  ndt_mapping.h  obstacle_map_server.h  particle_filter.h  robotx_localization.h  robotx_map_server.h  twist_calculator.h
robotx_navigation/launch/: move_base.launch  navigation.launch
robotx_navigation/src/: costmap_clear_request_sender.cpp  costmap_clear_request_sender_node.cpp  geographic_map_server.cpp  geographic_map_server_node.cpp  ndt_mapping.cpp  ndt_mapping_node.cpp  obstacle_map_server.cpp  obstacle_map_server_node.cpp  particle_filter.cpp  robotx_localization.cpp  robotx_localization_node.cpp  robotx_map_server.cpp  robotx_map_server_node.cpp  twist_calculator.cpp  twist_from_fix_velocity_node.cpp
robotx_packages/: CMakeLists.txt  package.xml
robotx_recognition/: CMakeLists.txt  package.xml  robotx_recognition_nodelet.xml
robotx_recognition/config/: euclidean_clustering.yaml  hsv_bouy_detector_config.yaml  object_bbox_extractor.yaml  passthrough_filter.yaml  pointcloud_merger.yaml  stereo_image_object_bbox_extractor.yaml
robotx_recognition/data/: trained_model.json  trained_weight.json
robotx_recognition/include/: bing_object_detection.h  disparity_image.h  euclidean_cluster_tracker.h  euclidean_clustering.h  euclidean_clustering_nodelet.h  hsv_buoy_detector.h  hsv_threshold.h  object_bbox_extractor.h  object_bbox_extractor_nodelet.h  object_model.h  object_recognition_nodelet.h  objectness_evaluator.h  particle_filter.h  passthrough_filter.h  passthrough_filter_nodelet.h  pcl_object_recognition.h  pointcloud_merger.h  pointcloud_merger_nodelet.h  random_sampling.h  stereo_image_object_bbox_extractor.h  voxelchain_input_generator.h
robotx_recognition/launch/: hsv_bouy_detector.launch  recognition.launch  recognition_nodelet.launch
robotx_recognition/launch_cuda/: cnn.launch
robotx_recognition/python/: cnn_prediction_node.py  cnn_prediction_node_with_imshow.py  prediction_module.py
robotx_recognition/src/: bing_object_detection.cpp  bing_object_detection_node.cpp  disparity_image.cpp  euclidean_cluster_tracker.cpp  euclidean_cluster_tracker_node.cpp  euclidean_clustering.cpp  euclidean_clustering_node.cpp  euclidean_clustering_nodelet.cpp  hsv_buoy_detector.cpp  hsv_buoy_detector_node.cpp  object_bbox_extractor.cpp  object_bbox_extractor_node.cpp  object_bbox_extractor_nodelet.cpp  object_model.cpp  object_recognition_node.cpp  object_recognition_nodelet.cpp  (+14 more)
robotx_tools/: CMakeLists.txt  package.xml  plugin_description.xml
robotx_visualization/: CMakeLists.txt  package.xml
wamv_description/: CMakeLists.txt  package.xml
wamv_gazebo/: CMakeLists.txt  package.xml
(+263 files in other folders)
