<?xml version="1.0"?>
<package format="2">
  <name>robotx_gazebo</name>
  <version>0.0.1</version>
  <description>
    The ROS package for the RobotX competition running in Gazebo.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="briansbngham@gmail.com">bsb</maintainer>
  <license>Apache 2.0</license>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>gazebo_dev</depend>
  <depend>std_msgs</depend>
  <depend>wamv_gazebo</depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>robotx_tools</exec_depend>
  <exec_depend>robotx_driver</exec_depend>
  <exec_depend>robotx_msgs</exec_depend>
  <exec_depend>robotx_navigation</exec_depend>
  <exec_depend>robotx_recognition</exec_depend>
  <exec_depend>wamv_description</exec_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
