<?xml version="1.0"?>
<package format="2">
  <name>robotx_msgs</name>
  <version>0.0.0</version>
  <description>The robotx_msgs package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>
  <author>masaya</author>
  <author>RyodoTanaka</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-bloom</build_depend>
  <build_depend>fakeroot</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>jsk_recognition_msgs</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
</package>
