<?xml version="1.0"?>
<package format="2">
  <name>robotx_packages</name>
  <version>0.1.0</version>
  <description>The robotx_packages meta package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>GPL</license>

  <url type="repository">http://github.com/OUXT-Polaris/robotx_core</url>

  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robotx_core</depend>
  <depend>robotx_docker_simulation</depend>
  <depend>robotx_gazebo</depend>
  <depend>robotx_tools</depend>
  <depend>cog_publisher</depend>
  <depend>mqtt_bridte</depend>
  <depend>usv_gazebo_plugins</depend>
  <depend>wamv_gazebo</depend>
  
  <export>
    <metapackage/>
  </export>

</package>
