<?xml version="1.0"?>
<package format="2">
  <name>robotx_packages</name>
  <version>0.1.0</version>
  <description>The robotx_packages meta package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>GPL</license>

  <url type="repository">http://github.com/OUXT-Polaris/robotx_core</url>

  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotx_core</exec_depend>
  <exec_depend>robotx_docker_simulation</exec_depend>
  <exec_depend>robotx_gazebo</exec_depend>
  <exec_depend>robotx_tools</exec_depend>
  <exec_depend>cog_publisher</exec_depend>
  <exec_depend>mqtt_bridge</exec_depend>
  <exec_depend>usv_gazebo_plugins</exec_depend>
  <exec_depend>wamv_gazebo</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
